--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-browserify": "1.2.0",
     "grunt-cli": "0.1.9",
     "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.1",
     "grunt-mocha": "~0.3.4",
     "mocha": "~1.12.0",
