--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "grunt-contrib-watch": "~0.5.1",
     "grunt-mocha": "~0.3.4",
     "mocha": "~1.12.0",
-    "phantomjs": "git://github.com/Obvious/phantomjs.git"
+    "phantomjs": "git://github.com/Obvious/phantomjs.git",
+    "sinon": "git://github.com/cjohansen/Sinon.JS.git#6acc4898775dbc5a3f6d88e9bc772133ba4e4e4e"
   }
 }
