--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js:
   - 0.9
 before_script:
-  - ./node_modules/.bin/bower install
+  - ./node_modules/.bin/grunt bower:install
 script:
   - ./node_modules/.bin/grunt
