--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js:
   - 0.10
 before_script:
-  - ./node_modules/.bin/grunt bower:install
+  - ./node_modules/.bin/gulp bower
 script:
-  - ./node_modules/.bin/grunt
+  - ./node_modules/.bin/gulp
