--- a/package.json
+++ b/package.json
@@ -21,23 +21,32 @@
   "description": "Keyboard shortcuts wrapped in Bacon",
   "dependencies": {},
   "devDependencies": {
-    "bower": "0.10.0",
-    "chai": "~1.7.2",
-    "coffee-script": "~1.6.3",
-    "coffeeify": "0.4.1",
-    "grunt": "~0.4.0",
-    "grunt-bower-task": "git://github.com/yatskevich/grunt-bower-task.git#c37a9789874c515effbb83f2d21c9c02bf7c7177",
-    "grunt-browserify": "1.2.0",
-    "grunt-cli": "0.1.9",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-watch": "~0.5.1",
-    "grunt-mocha": "~0.4.0",
-    "mocha": "~1.12.0",
-    "phantomjs": "git://github.com/Obvious/phantomjs.git#9e5eff53fb9f68700fe1b57e52e076825bc6ec03",
-    "sinon": "git://github.com/cjohansen/Sinon.JS.git#6acc4898775dbc5a3f6d88e9bc772133ba4e4e4e"
+    "bower": "~1.2.8",
+    "browserify": "~3.30.2",
+    "chai": "~1.9.0",
+    "coffee-script": "~1.7.0",
+    "coffeeify": "0.6.0",
+    "gulp": "~3.5.2",
+    "gulp-util": "~2.2.14",
+    "gulp-coffee": "~1.4.1",
+    "gulp-browserify": "~0.4.6",
+    "gulp-karma": "0.0.2",
+    "gulp-rename": "~1.1.0",
+    "gulp-uglify": "~0.2.1",
+    "karma": "~0.10.9",
+    "karma-browserify": "~0.1.0",
+    "karma-chrome-launcher": "~0.1.2",
+    "karma-coffee-preprocessor": "~0.1.3",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-mocha": "~0.1.1",
+    "karma-phantomjs-launcher": "~0.1.2",
+    "mocha": "~1.17.1",
+    "phantomjs": "~>1.9.1-1",
+    "sinon": "~1.8.2",
+    "gulp-bower": "0.0.2"
   },
   "scripts": {
-    "test": "./node_modules/.bin/grunt default"
+    "pretest": "./node_modules/.bin/bower install",
+    "test": "./node_modules/.bin/gulp test"
   }
 }
