--- a/package.json
+++ b/package.json
@@ -19,31 +19,38 @@
     }
   ],
   "description": "Keyboard shortcuts wrapped in Bacon",
-  "dependencies": {},
+  "peerDependencies": {
+    "baconjs": ">= 0.6.0",
+    "jquery": ">= 1.8.0"
+  },
+  "browserify": {
+    "transform": [
+      "coffeeify"
+    ]
+  },
   "devDependencies": {
-    "bower": "~1.2.8",
-    "browserify": "~3.30.2",
-    "chai": "~1.9.0",
-    "coffee-script": "~1.7.0",
+    "bower": "~1.3.5",
+    "browserify": "~4.1.9",
+    "chai": "~1.9.1",
+    "coffee-script": "~1.7.1",
     "coffeeify": "0.6.0",
-    "gulp": "~3.5.2",
-    "gulp-util": "~2.2.14",
-    "gulp-coffee": "~1.4.1",
-    "gulp-browserify": "~0.4.6",
-    "gulp-karma": "0.0.2",
-    "gulp-rename": "~1.1.0",
-    "gulp-uglify": "~0.2.1",
-    "karma": "~0.10.9",
-    "karma-browserify": "~0.1.0",
-    "karma-chrome-launcher": "~0.1.2",
-    "karma-coffee-preprocessor": "~0.1.3",
+    "gulp": "~3.8.0",
+    "gulp-util": "~2.2.16",
+    "gulp-coffee": "~2.0.1",
+    "gulp-rename": "~1.2.0",
+    "gulp-uglify": "~0.3.0",
+    "karma": "~0.12.0",
+    "karma-chrome-launcher": "~0.1.4",
     "karma-firefox-launcher": "~0.1.3",
-    "karma-mocha": "~0.1.1",
-    "karma-phantomjs-launcher": "~0.1.2",
-    "mocha": "~1.17.1",
-    "phantomjs": "~>1.9.1-1",
-    "sinon": "~1.8.2",
-    "gulp-bower": "0.0.2"
+    "karma-mocha": "~0.1.3",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "mocha": "~1.20.1",
+    "phantomjs": "~>1.9.1-8",
+    "sinon": "~1.10.2",
+    "vinyl-source-stream": "~0.1.1",
+    "gulp-wrap-umd": "~0.2.0",
+    "watchify": "~0.10.2",
+    "lodash": "~2.4.1"
   },
   "scripts": {
     "pretest": "./node_modules/.bin/bower install",
