--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
       "coffeeify"
     ]
   },
+  "scripts": {
+     "prepublish": "./node_modules/.bin/gulp dist"
+   },
+  "main": "./lib/bacontrap.js",
   "devDependencies": {
     "bower": "~1.3.5",
     "browserify": "~4.1.9",
