--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     ]
   },
   "scripts": {
-     "prepublish": "./node_modules/.bin/gulp dist"
-   },
-  "main": "./lib/bacontrap.js",
+    "prepublish": "./node_modules/.bin/gulp dist",
+    "test": "./node_modules/.bin/gulp test"
+  },
+  "main": "./bacontrap.js",
   "devDependencies": {
     "bower": "~1.3.5",
     "browserify": "~4.1.9",
@@ -55,10 +56,7 @@
     "gulp-wrap-umd": "~0.2.0",
     "watchify": "~0.10.2",
     "lodash": "~2.4.1",
-    "gulp-header": "~1.0.2"
-  },
-  "scripts": {
-    "pretest": "./node_modules/.bin/bower install",
-    "test": "./node_modules/.bin/gulp test"
+    "gulp-header": "~1.0.2",
+    "amdclean": "~2.2.2"
   }
 }
