--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     }
   ],
   "description": "Keyboard shortcuts wrapped in Bacon",
-  "dependencies": {
-    "baconjs": ">= 0.6.0",
-    "jquery": ">= 1.8.0"
-  },
   "scripts": {
     "test": "./node_modules/.bin/gulp test"
   },
   "main": "./bacontrap.js",
+  "dependencies": {
+    "baconjs": ">= 0.6.0",
+    "jquery": ">= 1.8.0"
+  },
   "devDependencies": {
     "bower": "~1.3.5",
     "browserify": "~4.1.9",
@@ -51,6 +51,6 @@
     "watchify": "~0.10.2",
     "lodash": "~2.4.1",
     "gulp-header": "~1.0.2",
-    "amdclean": "~2.2.2"
+    "gulp-amdclean": "~0.2.1"
   }
 }
