--- a/package.json
+++ b/package.json
@@ -25,15 +25,14 @@
   "main": "./bacontrap.js",
   "dependencies": {
     "baconjs": ">= 0.6.0",
-    "jquery": ">= 1.8.0"
+    "jquery": ">= 1.8.0",
   },
   "devDependencies": {
-    "bower": "~1.3.5",
-    "browserify": "~4.1.9",
+    "browserify": "~4.2.0",
     "chai": "~1.9.1",
     "coffee-script": "~1.7.1",
     "coffeeify": "0.6.0",
-    "gulp": "~3.8.0",
+    "gulp": "~3.8.5",
     "gulp-util": "~2.2.16",
     "gulp-coffee": "~2.0.1",
     "gulp-rename": "~1.2.0",
@@ -44,7 +43,7 @@
     "karma-mocha": "~0.1.3",
     "karma-phantomjs-launcher": "~0.1.4",
     "mocha": "~1.20.1",
-    "phantomjs": "~>1.9.1-8",
+    "phantomjs": "~>1.9.7-12",
     "sinon": "~1.10.2",
     "vinyl-source-stream": "~0.1.1",
     "gulp-wrap-umd": "~0.2.0",
