--- a/package.json
+++ b/package.json
@@ -28,28 +28,28 @@
     "jquery": ">= 1.8.0"
   },
   "devDependencies": {
-    "browserify": "~4.2.0",
-    "chai": "~1.9.1",
-    "coffee-script": "~1.7.1",
-    "coffeeify": "0.6.0",
+    "browserify": "~8.0.2",
+    "chai": "~1.10.0",
+    "coffee-script": "~1.8.0",
+    "coffeeify": "1.0.0",
     "gulp": "~3.8.5",
-    "gulp-util": "~2.2.16",
-    "gulp-coffee": "~2.0.1",
-    "gulp-rename": "~1.2.0",
-    "gulp-uglify": "~0.3.0",
+    "gulp-amdclean": "^1.0.1",
+    "gulp-coffee": "~2.2.0",
+    "gulp-header": "^1.2.2",
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^1.0.2",
+    "gulp-util": "^3.0.1",
+    "gulp-wrap-umd": "0.2.0",
     "karma": "~0.12.0",
     "karma-chrome-launcher": "~0.1.4",
     "karma-firefox-launcher": "~0.1.3",
     "karma-mocha": "~0.1.3",
     "karma-phantomjs-launcher": "~0.1.4",
-    "mocha": "~1.20.1",
-    "phantomjs": "~>1.9.7-12",
-    "sinon": "~1.10.2",
-    "vinyl-source-stream": "~0.1.1",
-    "gulp-wrap-umd": "~0.2.0",
-    "watchify": "~0.10.2",
     "lodash": "~2.4.1",
-    "gulp-header": "~1.0.2",
-    "gulp-amdclean": "~0.2.1"
+    "mocha": "~2.1.0",
+    "phantomjs": "~>1.9.7-12",
+    "sinon": "~1.12.2",
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^2.2.1"
   }
 }
