--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "karma-chrome-launcher": "~0.1.4",
     "karma-firefox-launcher": "~0.1.3",
     "karma-mocha": "~0.1.3",
-    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-phantomjs-launcher": "~1.0.4",
     "lodash": "~2.4.1",
     "mocha": "~2.1.0",
-    "phantomjs": "~>1.9.7-12",
+    "phantomjs": "^2.1.7",
     "sinon": "~1.12.2",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.2.1"
