--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   },
   "main": "./bacontrap.js",
   "dependencies": {
-    "baconjs": ">= 0.6.0",
-    "jquery": ">= 1.8.0"
+    "baconjs": ">= 0.6.0"
   },
   "devDependencies": {
     "browserify": "~8.0.2",
@@ -44,7 +43,7 @@
     "karma-chrome-launcher": "~0.1.4",
     "karma-firefox-launcher": "~0.1.3",
     "karma-mocha": "~0.1.3",
-    "karma-phantomjs-launcher": "~1.0.4",
+    "karma-phantomjs-launcher": "^1.0.4",
     "lodash": "~2.4.1",
     "mocha": "~2.1.0",
     "phantomjs": "^2.1.7",
